<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Master">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/first_matrix_preview"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <Switch
                    android:id="@+id/swDistribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distributed_approach"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/t_first_matrix" />

                <TextView
                    android:id="@+id/tvFirstMatrix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/matrix_multiplication" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/t_second_matrix" />

                <TextView
                    android:id="@+id/tvSecondMatrix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvMatResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:text="@string/result_matrix" />

                <TextView
                    android:id="@+id/tvMasterEqual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/equal" />

                <TextView
                    android:id="@+id/tvMasterResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvMasterProcess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analysis"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvMasterTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvMasterPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btnFstMtrPrev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick="uploadMatrix"
                android:text="@string/process"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>